--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,5 @@ Flask-SQLAlchemy>=2.3.2
 Flask-Migrate>=2.2.0
 Flask-Script>=2.0.6
 Flask-RESTful>=0.3.6
+requests>=2.19.1
+python-scrapyd-api>=2.1.2
